a tag bug fixed for catalog partial

--- a/Views/Shared/_CatalogPartial.cshtml
+++ b/Views/Shared/_CatalogPartial.cshtml
@@ -33,9 +33,8 @@
                         <div class="upper-box">
                             <span class="icon @iconClass"></span>
                             <h3>
-                                <a asp-controller="Shop" asp-action="Catalog" asp-route-catalogName="@item.Key"
-                                    @* href="@Url.Action("OpenPdf", "Home", new { filePath = pdfPath })" target="_blank" *@>@item.Key
-                                   </a></h3>
+                               @item.Key
+                            </h3>  
                         </div>
                         <div class="lower-box">
                             <div class="image">
@@ -59,3 +58,4 @@
     </div>
 </section>
 <!--End Catalogs Section-->
+@* href="@Url.Action("OpenPdf", "Home", new { filePath = pdfPath })" target="_blank" *@
