city street logic

--- a/Views/Shared/_PartialBlogCard.cshtml
+++ b/Views/Shared/_PartialBlogCard.cshtml
@@ -3,7 +3,7 @@
 <div class="news-block-three col-lg-4 col-md-6 col-sm-12">
     <div class="inner-box">
         <div class="image">
-            <img loading="lazy" src="@Url.Content(Model.ImageUrl))" alt="@Model.Title" />
+            <img loading="lazy" src="@Url.Content(Model.ImageUrl)" alt="@Model.Title" />
             <a class="overlay-link" asp-controller="blog" asp-action="BlogPost" asp-route-path="@Model.Slug"><span class="icon fa fa-link"></span></a>
         </div>
         <div class="lower-content">
