--- a/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -34,7 +34,7 @@
                         <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
                             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                             <div class="form-floating mb-3">
-                                <label asp-for="Input.Email" class="form-label"></label>
+                                <label asp-for="Input.Email" class="form-label mb-2"></label>
                                 <input asp-for="Input.Email" class="form-control" autocomplete="email" placeholder="Lütfen Mail Adresinizi Giriniz." style="min-width: 500px;"/>
                                 <span asp-validation-for="Input.Email" class="text-danger"></span>
                             </div>
