--- a/Views/Shared/_PartialBlogContent.cshtml
+++ b/Views/Shared/_PartialBlogContent.cshtml
@@ -4,7 +4,7 @@
 <div class="news-single">
     <div class="inner-box">
         <div class="image">
-            <img loading="lazy" src="@Url.Content(Model.ImageUrl))" alt="@Model.Title" />
+            <img loading="lazy" src="@Url.Content(Model.ImageUrl)" alt="@Model.Title" />
         </div>
         <div class="lower-content">
             <ul class="post-meta">
