--- a/Views/Shared/_PartialOnBilgilendirmeFormu.cshtml
+++ b/Views/Shared/_PartialOnBilgilendirmeFormu.cshtml
@@ -70,7 +70,7 @@
                 </tr>
                 <tr>
                     <td colspan="3">Kargo Ücreti</td>
-                    <td>0</td>
+                    <td>@Model.ShippingCost</td>
                 </tr>
             }
 		    <tr>
@@ -80,7 +80,7 @@
         </tbody>
     </table>
     <p>
-        <strong>Kargo Tutarı:</strong> 0,00 TL<br>
+        <strong>Kargo Tutarı:</strong> @Model.ShippingCost TL<br>
         <strong>Ödeme Şekli:</strong> <span id="info-form-payment-type">@(Model.PaymentType == 1 ? "Kredi Kartı" : "Banka Transferi")</span><br />
         <strong>Taksit Adedi: </strong> <span id="info-form-installment-amount">@Model.InstallmentAmount</span><br />
         <strong>Ödenecek Toplam Tutar:</strong> <span id="info-form-total-amount"> @Model.TotalAmount.ToString("C2")</span><br />
