--- a/Views/Payment/Index.cshtml
+++ b/Views/Payment/Index.cshtml
@@ -192,7 +192,7 @@
                                         </div>
                                         <div class="form-group col-lg-6 col-md-6 col-sm-12">
                                             <div class="field-label">CVV:</div>
-                                            <input style="max-width:40px;" class="no-arrow" type="number" id="cvv" placeholder="CVV">
+                                            <input style="max-width:40px; padding-left:5px;" class="no-arrow" type="number" id="cvv" placeholder="CVV">
                                         </div>
                                         <div id="installment-div" class="form-group col-lg-6 col-md-6 col-sm-12" style="display:none;">
                                             <label for="installment">Taksit Seçeneği:</label>
