--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -626,8 +626,8 @@
     @RenderSection("RevolutionSlider", required: false)
     
 
-    @* <script src="~/js/popper.min.js"></script> *@
-@*     <script src="~/js/bootstrap.min.js" defer></script> *@
+    <script src="~/js/popper.min.js"></script> 
+    <script src="~/js/bootstrap.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"
