--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -154,7 +154,7 @@
 							 data-y="['middle','middle','middle','middle']"
 							 data-textalign="['top','top','top','top']"
 							 data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":1000,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"to":"auto:auto;","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'>
-							<a asp-controller="Shop" asp-action="Index" class="theme-btn btn-style-one">Daha Fazla</a> <a href="solutions.html" class="theme-btn btn-style-two">Mağaza</a>
+							<a asp-controller="Shop" asp-action="Index" class="theme-btn btn-style-one">Mağaza</a> 
 						</div>
 
 					</li>
@@ -215,7 +215,7 @@
 							 data-y="['middle','middle','middle','middle']"
 							 data-textalign="['top','top','top','top']"
 							 data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":1000,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"to":"auto:auto;","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'>
-							<a asp-controller="Home" asp-action="About" class="theme-btn btn-style-one">Daha Fazla</a> <a href="solutions.html" class="theme-btn btn-style-two">Hizmetlerimiz</a>
+							<a asp-controller="Home" asp-action="About" class="theme-btn btn-style-one">Hizmetlerimiz</a> 
 						</div>
 
 					</li>
