--- a/Views/Home/ContactUs.cshtml
+++ b/Views/Home/ContactUs.cshtml
@@ -9,6 +9,22 @@
     <meta name="keywords" content="Çin ithalat, toptan ürünler, perakende satış, marka patent, e-ticaret çözümleri, toptan spor malzemeleri ithalatı, marka desteği, toptan petshop ürünleri,
                                         toptan spor malzemesi">
 }
+
+@section SocialMetas {
+	<!-- Open Graph -->
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="İthal Ürünler | Toptan ve Perakende Satış" />
+	<meta property="og:description" content="İthal ürünleri toptan ve perakende olarak satın alın. Katalog ürünleri, marka patent desteği ve e-ticaret çözümleri sunuyoruz." />
+	<meta property="og:url" content="https://birilerigt.com/Home/ContactUs" />
+	<meta property="og:image" content="https://birilerigt.com/images/logo-resim.png" /> <!-- put your logo or product image -->
+	<meta property="og:locale" content="tr_TR" />
+
+	<!-- Twitter Card -->
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="İthal Ürünler | Toptan ve Perakende Satış" />
+	<meta name="twitter:description" content="İthal ürünleri toptan ve perakende olarak satın alın. Katalog ürünleri, marka patent desteği ve e-ticaret çözümleri sunuyoruz." />
+	<meta name="twitter:image" content="https://birilerigt.com/images/logo-resim.png" />
+}
 @Html.AntiForgeryToken()
 @Html.Partial("_PartialContactUs");
 
