--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,6 +9,21 @@
     <meta name="keywords" content="Çin ithalat, toptan ürünler, perakende satış, marka patent, e-ticaret çözümleri, toptan spor malzemeleri ithalatı, marka desteği, toptan petshop ürünleri,
                                     toptan spor malzemesi">
 }
+@section SocialMetas{
+	<!-- Open Graph -->
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="İthal Ürünler | Toptan ve Perakende Satış" />
+	<meta property="og:description" content="İthal ürünleri toptan ve perakende olarak satın alın. Katalog ürünleri, marka patent desteği ve e-ticaret çözümleri sunuyoruz." />
+	<meta property="og:url" content="https://birilerigt.com/" />
+	<meta property="og:image" content="https://birilerigt.com/images/logo-resim.png" /> <!-- put your logo or product image -->
+	<meta property="og:locale" content="tr_TR" />
+
+	<!-- Twitter Card -->
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="İthal Ürünler | Toptan ve Perakende Satış" />
+	<meta name="twitter:description" content="İthal ürünleri toptan ve perakende olarak satın alın. Katalog ürünleri, marka patent desteği ve e-ticaret çözümleri sunuyoruz." />
+	<meta name="twitter:image" content="https://birilerigt.com/images/logo-resim.png" />
+}
 @section RevolutionCSS {
 	<link rel="preload" as="image" href="/images/main-slider/logistics.avif">
 	<link href="~/plugins/revolution/css/settings.css" rel="stylesheet" type="text/css"><!-- REVOLUTION SETTINGS STYLES -->
