--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     @RenderSection("Title", required: true)
     @RenderSection("Description", required: true)
     @RenderSection("Keywords", required: true)
+    @RenderSection("SocialMetas", required: false)
     <!-- Stylesheets -->
     @* <link href="~/css/bootstrap.css" rel="stylesheet"> *@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-..." crossorigin="anonymous">
