--- a/Views/Shared/_PartialProductCard.cshtml
+++ b/Views/Shared/_PartialProductCard.cshtml
@@ -38,7 +38,7 @@
                         <img loading="lazy" src="@Url.Content(string.Format("/images/resource/products/{0}/1.jpg", item.ProductCode))" alt="@item.ProductName" />
                         <div class="overlay-box">
                             <ul class="cart-option">
-                                <li><a asp-controller="Shop" asp-action="ProductDetailed" asp-route-productCode="@item.ProductCode"><span class="fa fa-link"></span></a></li>
+                                <li><a asp-controller="Shop" asp-action="ProductDetailed" asp-route-name="@item.Slug" asp-route-productCode="@item.ProductCode"><span class="fa fa-link"></span></a></li>
                             </ul>
                         </div>
                     </div>
