--- a/Views/Shared/_PartialPopularProductsWidget.cshtml
+++ b/Views/Shared/_PartialPopularProductsWidget.cshtml
@@ -24,7 +24,7 @@
                         </a>
                     </figure>
                     <h4>
-                        <a asp-controller="Shop" asp-action="ProductDetailed" asp-route-productCode="@item.ProductCode">
+                        <a asp-controller="Shop" asp-action="ProductDetailed" asp-route-name="@item.Slug" asp-route-productCode="@item.ProductCode">
                             @productName
                         </a>
                     </h4>
