--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -405,7 +405,7 @@
                                 <div class="footer-column col-lg-4 col-md-6 col-sm-12">
                                     <div class="footer-widget logo-widget">
                                         <div class="logo">
-                                            <a href="index.html"><img src="~/images/footer-logo.png" loading="lazy" alt="Birileri İthalat Logo" class="logo-image" /></a>
+                                            <a asp-controller="Home" asp-action="index"><img src="~/images/footer-logo.png" loading="lazy" alt="Birileri İthalat Logo" class="logo-image" /></a>
                                         </div>
                                         <div class="text">
                                             Birileri Dış Ticaret  olarak, uluslararası kalite standartlarına uygun şekilde ithalat gerçekleştiriyoruz.
